<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:alpha="0.9"
        android:background="#FFFFFF" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenPerfil"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/img_1">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombrePersona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrePersona"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/ultimoMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/ultimoMensaje"
                    android:textSize="14sp">

                </TextView>
                <TextView
                    android:id="@+id/vistaPrevia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="vista previa"
                    android:textSize="14sp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/horaMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/horaMensaje">

        </TextView>

        <ImageView
            android:id="@+id/estrella"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_below="@+id/horaMensaje"

            android:layout_alignParentRight="true"
            android:layout_marginTop="13dp"
            android:layout_marginRight="32dp"
            app:srcCompat="@android:drawable/btn_star_big_off" />

    </RelativeLayout>

</LinearLayout>